--- a/src/App.css
+++ b/src/App.css
@@ -668,6 +668,7 @@ a{
      box-shadow: 1px 1px 2px var(--text-color-para1);
 }
 .category-square .img{
+     position: relative;
      width: clamp(70px, 45%, 150px);
      padding: 15px;
      border-radius: 50%;
@@ -681,14 +682,22 @@ a{
 }
 
 .category-square .img img{
-     width: 80%;
+     position: absolute;
+     align-self: center;
+     width: 60%;
+     /* max-height: 40px; */
+     max-height: 80%;
 }
 .category-square h3{
      font-size: 0.8rem;
      color: var(--text-color-black);
      font-weight: 700;
      margin-top:5px;
+     max-width: 85%;
      text-align: center;
+     text-overflow: ellipsis;
+     white-space: nowrap;
+     overflow: hidden;
 }
 .category-square p{
      font-size: 0.7rem;
