--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
 
 html{
      scroll-behavior: smooth;
+     width: 100%;
 }
 
 *{
@@ -107,6 +108,62 @@ a{
      font-weight: 600;
      border-radius: 5px 0 5px 0;
      padding: 2.5px 0;
+}
+
+.alert-view{
+     background-color: var(--back-color-gold1);
+     width: clamp(300px, 20%, 400px);
+     border-radius: 10px;
+     padding: 5px;
+     position: fixed;
+     align-self: center;
+     margin: 10px auto;
+     right: 2%;
+     z-index: 100;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: space-evenly;
+}
+
+.alert-view i{
+     font-size: 1.2rem;
+     margin:auto 10px ;
+     width: 30px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     aspect-ratio: 1/1;
+     padding: 2px;
+     border-radius: 50%;
+}
+
+.success{
+     color: var(--featured-plan);
+     border: 2px solid var(--featured-plan);
+}
+
+.succes i{
+     background-color: var(--featured-plan);
+     color: var(--white-text);
+}
+
+.fail{
+     border: 2px solid var(--back-color-red1);
+     color: var(--back-color-red1);
+}
+
+.fail i{
+     background-color: var(--back-color-red1);
+     color: var(--white-text);
+}
+
+.form-errors{
+     color: var(--back-color-red1);
+     font-size: 0.7rem;
+     text-align: right;
+     width: 95%;
+     margin: 1px auto;
 }
 
 /* client pages */
@@ -224,10 +281,34 @@ a{
      line-height: 1.1;
 }
 
+.header-profile{
+     width: clamp(150px, 30%, 1000px);
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: flex-end;
+}
+
 .desktop-header h1 a{
      color: white;
 }
 
+.header-profileImage{
+     width: clamp(30px, 20%, 40px);
+     margin: 0 10px;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+}
+
+.header-profileImage img{
+     width: 80%;
+     aspect-ratio: 1/1;
+     border-radius: 50%;
+     border: 1px solid var(--featured-plan);
+     background-color: var(--back-color-gold2);
+}
 .actionBtn{
      display: flex;
      flex-direction: row;
@@ -238,8 +319,8 @@ a{
      font-size: 1.1rem ;
      outline: none;
      border: none;
-     padding: 5px 20px ;
-     border-radius: 50px;
+     padding: 2.5px 20px ;
+     border-radius: 1rem;
      letter-spacing: 0.56px;
      border: 1.5px solid var(--back-color-gold2);
      transition: all 0.9s;
@@ -537,6 +618,16 @@ a{
 .loading img{
      width: clamp(50px, 5%, 100px);
 }
+
+.loading-absolute{
+     position: fixed;
+     width: 100%;
+     height: 100%;
+     top: 0;
+     z-index: 50;
+     /* background-color: #c0b6b624; */
+}
+
 /* end of fixed components */
 
 
@@ -673,7 +764,8 @@ a{
      padding: 15px;
      border-radius: 50%;
      aspect-ratio: 1/1;
-     background-color: var(--back-color-gold1);
+     /* background-color: var(--back-color-gold1); */
+     background-color: var(--back-color-gold2);
      mix-blend-mode: multiply;
      display: flex;
      flex-direction: row;
