--- a/src/App.css
+++ b/src/App.css
@@ -417,6 +417,7 @@ a{
      flex-direction: column;
      align-items: flex-start;
      justify-content: flex-start;
+     margin: 2px auto 15px;
 }
 
 .footer a, .footer p{
@@ -605,9 +606,6 @@ a{
 /* end of static components */
 
      /*containers*/
-.category-square{
-     width: clamp(150px,  );
-}
 
 .loading{
      width: clamp(350px, 80%, 1600px);
@@ -746,7 +744,7 @@ a{
 
 /* small container styles */
 .category-square{
-     width: clamp(120px,12.5%, 300px);
+     width: clamp(100px,13%, 300px);
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -1119,7 +1117,10 @@ a{
           display: none;
      }
      .desktop-header h1{
-          font-size: 1.8rem;
+          font-size: 1.6rem;
+     }
+     .home .hello-section .col h1{
+          font-size: 2.5rem;
      }
 }
 
