--- a/src/App.css
+++ b/src/App.css
@@ -1122,6 +1122,17 @@ a{
      .home .hello-section .col h1{
           font-size: 2.5rem;
      }
+     .dashboard-main-container{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+     }
+     .dashboard-navbar{
+          width: 90%;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-evenly;
+     }
 }
 
 
