--- a/src/App.css
+++ b/src/App.css
@@ -1128,10 +1128,12 @@ a{
           align-items: center;
      }
      .dashboard-navbar{
+          position: relative;
           width: 90%;
           flex-direction: row;
           align-items: center;
           justify-content: space-evenly;
+          margin: 5px auto;
      }
 }
 
