--- a/src/App.css
+++ b/src/App.css
@@ -586,6 +586,59 @@ a{
      cursor: pointer;
      color: var(--back-color-gold2);
 }
+
+.advert-form-container{
+     position: relative;
+     width: clamp(380px, 80%, 1600px);
+     background-color: var(--white-text);
+     border-radius: 10px;
+     padding: 10px;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     max-height: 80%;
+     overflow-y: scroll;
+     color: var(--text-color-title);
+}
+
+.advert-form-container .close-icon {
+     top:15px;
+     position: fixed;
+}
+
+.advert-form-container::-webkit-scrollbar{
+     height: 4px;
+}
+.advert-form-container form{
+     width: 95%;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     position: relative;
+}
+
+.advert-form-container form .row{
+     width: 95%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-between;
+     flex-wrap: wrap;
+     margin: 10px auto;
+}
+
+.advert-form-container form .col{
+     width: 45%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-between;
+     min-width: 300px;
+     flex-wrap: wrap;
+     margin:5px auto;
+}
+
 .line-divider {
      width: 90%;
      position: relative;
@@ -683,11 +736,18 @@ a{
      width: clamp(380px, 90%, 1600px );
      display: flex;
      flex-direction: row;
-     align-items: center;
+     align-items: flex-start;
      position: relative;
      justify-content: space-between;
      margin: 5px auto;
      padding: 5px 10px;
+     position: relative;
+     max-height: 80vh;
+     overflow: scroll;
+}
+
+.dashboard-main-container::-webkit-scrollbar{
+     display: none;
 }
 
 .dashboard-navbar{
@@ -695,9 +755,9 @@ a{
      display: flex;
      flex-direction: column;
      align-items: center;
-     justify-content: center;
+     justify-content: flex-start;
      position: sticky;
-     top: 180px;
+     top: 10px;
      box-shadow: 1px 1px 4px var(--back-color-gold2-transparent);
      border-radius: 5px;
      padding: 10px 0;
@@ -740,6 +800,82 @@ a{
      flex-direction: column;
      align-items: center;
      justify-content: center;
+}
+
+.dashboard-container{
+     width: 96%;
+     margin: 5px auto;
+     
+}
+
+.dashboard-row{
+     width: 98%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-evenly;
+     margin: 10px auto;
+     flex-wrap: wrap;
+     padding: 10px 0;
+}
+
+.dashboard-row h2{
+     color: var(--text-color-title);
+     font-size: 2rem;
+     width: 90%;
+}
+
+.dash-col{
+     width: 50%;
+     min-width: 300px;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-evenly;
+     flex-wrap: wrap;
+}
+
+.dash-col .group{
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     width: 90%;
+     flex-wrap: wrap;
+     align-items: center;
+     justify-content: space-between;
+     margin: 5px auto;
+}
+
+.dashboard-column{
+     width: 96%;
+}
+
+.image-dash-col{
+     width: 50%;
+     position: relative;
+     min-width: 80px;
+     max-width: 100px;
+}
+
+.edit-icon{
+     position: absolute;
+     top: 0;
+     right: 0;
+     color: var(--back-color-gold2);
+     width: 20px;
+     height: 20px;
+     border-radius: 50%;
+     transition: all 0.4s;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+}
+
+.edit-icon:hover{
+     background-color: var(--text-color-para2);
+     cursor: pointer;
+     transform: scale(1.2);
 }
 
 /* end of user dashboard components */
@@ -937,7 +1073,7 @@ a{
 }
 
 .advert-view-container .close-icon{
-     z-index: 25;
+     z-index: 35;
      top: 5px;
      position: fixed;
 }
@@ -1069,6 +1205,7 @@ a{
 .urgent{
      background-color: var(--back-color-red1);
 }
+
 
 
 /* end of overriders */
