--- a/src/App.css
+++ b/src/App.css
@@ -526,8 +526,12 @@ a{
      display: flex;
      flex-direction: column;
      align-items: center;
+     overflow-y: scroll;
 }
 
+.user-forms .form-container::-webkit-scrollbar{
+     display: none;
+}
 .user-forms .form-container form{
      width: 90%;
      margin: 5px auto;
