--- a/src/App.css
+++ b/src/App.css
@@ -497,8 +497,8 @@ a{
 }
 
 .close-icon{
-     position: absolute;
-     top: -35px;
+     position: fixed;
+     top: 15px;
      background-color: var(--back-color-gold1);
      width: 30px;
      aspect-ratio: 1/1;
@@ -519,13 +519,14 @@ a{
 }
 .user-forms .form-container{
      position: relative;
-     width: clamp(360px, 40%, 1200px);
+     width: clamp(360px, 80%, 1600px);
      background-color: var(--white-text);
      border-radius: 10px;
      padding: 10px;
      display: flex;
      flex-direction: column;
      align-items: center;
+     max-height: 80%;
      overflow-y: scroll;
 }
 
@@ -593,7 +594,7 @@ a{
 
 .advert-form-container{
      position: relative;
-     width: clamp(380px, 80%, 1600px);
+     width: clamp(360px, 80%, 1600px);
      background-color: var(--white-text);
      border-radius: 10px;
      padding: 10px;
