--- a/src/App.css
+++ b/src/App.css
@@ -952,13 +952,12 @@ a{
      border-radius: 5px;
      margin:0 2.5px 10px 2.5px;
      padding: 0 0 5px 0 ;
-     transition: all 1s;
+     transition: all 0.1s;
 }
 
 .product-square-container:hover{
-     cursor: pointer;
-     box-shadow: 1px 1px 5px 3px var(--back-color-gold2);
-     transform: scale(1.05);
+     box-shadow: 1px 1px 2px 1px var(--back-color-gold2);
+     transform: scale(1.01);
 }
 
 
@@ -968,23 +967,52 @@ a{
      margin: 0 0 20px;
 }
 
+.product-square-container .cat{
+     background-color: var(--text-color-para2);
+     width: 90%;
+     text-overflow: ellipsis;
+     white-space: nowrap;
+     overflow: hidden;
+     margin: 5px auto 1px;
+     padding: 3px 10px;
+     font-size: 0.9rem;
+     border-radius: 2rem;
+     transition: all 0.3s;
+}
+
+.product-square-container .cat:hover{
+     cursor: pointer;
+     background-color: var(--text-color-title);
+     color: var(--white-text);
+}
+
 .product-square-container h5{
-     font-size: 1.1rem;
-     font-weight: 600;
-     color: var(--text-color-black);
+     font-size: 1rem;
+     font-weight: 800;
+     color: var(--text-color-title);
      margin: 2px 0;
      padding: 0;
      max-width: 95%;
      text-overflow: ellipsis;
      white-space: nowrap;
      overflow: hidden;
+     border-radius: 5px;
+     transition: all 0.2s;
+}
+
+.product-square-container h5:hover{
+     cursor: pointer;
+     background-color: var(--text-color-title);
+     color: var(--white-text);
+     padding: 1px 3px;
+
 }
 
 .product-square-container .content{
-     width: 95%;
+     width: 98%;
      display: flex;
-     flex-direction: row;
-     align-items: center;
+     flex-direction: column;
+     align-items: flex-start;
      justify-content: space-between;
      margin: 5px auto;
      padding:  4px 2.5px;
@@ -994,6 +1022,16 @@ a{
 .product-square-container .content b{
      font-size: 1rem;
      color: var(--back-color-red1);
+     width: 95%;
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+     align-items: center;
+}
+
+.product-square-container .content a{
+     font-size: 0.9rem;
+     text-transform: capitalize;
 }
 .ad-image {
      width: 100%;
@@ -1183,11 +1221,26 @@ a{
      width: clamp(370px, 48%, 1000px);
 }
 
+.advert-page-mainAdvert .col .cat{
+     margin: 5px auto 5px;
+     width: 100%;
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+}
+
+.advert-page-mainAdvert .col .cat span{
+     background-color: var(--text-color-para2);
+     border-radius: 2rem;
+     padding: 4px 10px ;
+     margin: 0 20px 0 0;
+}
 .advert-page-mainAdvert .col h2{
      text-transform:capitalize;
      font-weight: 800;
      font-size: 2rem;
-     color: var(--text-color-black);
+     color: var(--text-color-title);
+     margin: 20px auto 5px;
 }
 
 .advert-page-mainAdvert .col .images{
@@ -1215,7 +1268,12 @@ a{
      flex-direction: row;
      align-items: center;
      justify-content: space-evenly;
-     flex-wrap: wrap;
+     flex-wrap: nowrap;
+     overflow-x: scroll;
+}
+
+.advert-page-mainAdvert .col .images .otherImages::-webkit-scrollbar{
+     display: none;
 }
 
 .advert-page-mainAdvert .col .images .otherImages img{
@@ -1249,7 +1307,7 @@ a{
 .advert-page-mainAdvert .col .content h4{
      font-size: 1.2rem;
      font-weight: 700;
-     color: var(--text-color-black);
+     color: var(--text-color-title);
      margin: 5px 0;
 
 }
@@ -1277,7 +1335,7 @@ a{
 .advert-page-mainAdvert .col .vendor h4{
      font-size: 1.1rem;
      font-weight: 800;
-     color: var(--text-color-black);
+     color: var(--text-color-title);
      margin: 5px 0;
      width: 90%;
 }
@@ -1299,7 +1357,7 @@ a{
 .advert-page-mainAdvert .col .vendor h5{
      font-size: 1.1rem;
      font-weight: 800;
-     color: var(--text-color-black);
+     color: var(--text-color-title);
      margin: 5px 0;
      width: 90%;
      text-align: center;
