--- a/src/App.css
+++ b/src/App.css
@@ -884,6 +884,55 @@ a{
      transform: scale(1.2);
 }
 
+.dash-advert-row{
+     width: 95%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-between;
+     box-shadow: 1px 1px 5px var(--back-color-gold2);
+     padding: 5px 10px;
+     border-radius: 10px;
+     margin: 5px auto;
+}
+
+.dash-advert-title{
+     width: 95%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-between;
+     padding: 5px 10px;
+     margin: 5px auto;
+     color: var(--text-color-title);
+     font-weight: 700;
+}
+
+.dash-advert-title .icons, .dash-advert-row .icons{
+     text-align: center;
+     width: 7.5%;
+}
+
+.dash-advert-title .ad-title, .dash-advert-row .ad-title{
+     width: 40%;
+     color: var(--text-color-title);
+     font-weight: 700;
+}
+
+.dash-advert-title .price, .dash-advert-row .price{
+     text-align: center;
+     width: 10%;
+}
+
+.dash-advert-title .status, .dash-advert-row .status{
+     text-align: center;
+     width: 10%;
+}
+
+.dash-advert-title .date, .dash-advert-row .date{
+     text-align: center;
+     width: 20%;
+}
 /* end of user dashboard components */
 
 /* small container styles */
